--- a/sass/slide.scss
+++ b/sass/slide.scss
@@ -2,10 +2,6 @@
   position: relative;
 }
 #live-dance-show .slidesjs-navigation {
-  margin-top:3px;
-}
-
-#live-dance-show .slidesjs-navigation {
   background: url("../images/slide-nav.png") no-repeat;
   position: absolute;
   width: 65px;
@@ -18,6 +14,7 @@
     text-indent: -9999px;
   }  
 }
+
 #live-dance-show .slidesjs-next {
   right: 0;
   background-position: -85px -9px;
@@ -33,7 +30,7 @@
   }
 }
 
-.slidesjs-pagination {
+#live-dance-show .slidesjs-pagination {
   position: absolute;
   bottom: 20px;
   z-index: 10;
@@ -42,12 +39,12 @@
   -webkit-transform: scale(1.5);
 }
 
-.slidesjs-pagination li {
+#live-dance-show .slidesjs-pagination li {
   display: inline-block;
   margin: 0 2px;
 }
 
-.slidesjs-pagination li a {
+#live-dance-show .slidesjs-pagination li a {
   display: block;
   width: 13px;
   text-decoration: none;
@@ -66,15 +63,94 @@
   }
 }
 
-.slidesjs-pagination li a.active,
-.slidesjs-pagination li a:hover.active {
+#live-dance-show .slidesjs-pagination li a.active,
+#live-dance-show .slidesjs-pagination li a:hover.active {
   background-position: 0 -13px
 }
 
-.slidesjs-pagination li a:hover {
+#live-dance-show .slidesjs-pagination li a:hover {
   background-position: 0 -26px
 }
 
 .navbar {
   overflow: hidden
+}
+
+
+
+// new year slide css
+.new-year {
+    #new-year-slide {
+      position: relative;
+    }
+    a.slidesjs-next,
+    a.slidesjs-previous {
+      background-image: url(../images/btns-next-prev.png);
+      position: absolute;
+      z-index: 10;
+      width:12px;
+      height:18px;
+      text-indent: -9999px;
+      bottom: 0;
+      z-index: 100;
+    }
+
+    a.slidesjs-next {
+      background-position: -12px 0;
+      left: 20px;
+    }
+
+    a:hover.slidesjs-next {
+      background-position: -12px -18px;
+    }
+
+    a.slidesjs-previous {
+      left: 0;
+      background-position: 0 0;
+    }
+
+    a:hover.slidesjs-previous {
+      background-position: 0 -18px;
+    }
+
+    .slidesjs-pagination {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
+
+    .slidesjs-pagination li {
+      float: left;
+      margin: 0 1px;
+    }
+
+    .slidesjs-pagination li a {
+      display: block;
+      width: 13px;
+      height: 0;
+      padding-top: 13px;
+      background-image: url(../images/pagination.png);
+      background-position: 0 0;
+      float: left;
+      overflow: hidden;
+    }
+
+    .slidesjs-pagination li a.active,
+    .slidesjs-pagination li a:hover.active {
+      background-position: 0 -13px
+    }
+
+    .slidesjs-pagination li a:hover {
+      background-position: 0 -26px
+    }
+
+    #new-year-slide a:link,
+    #new-year-slide a:visited {
+      color: #333
+    }
+
+    #new-year-slide a:hover,
+    #new-year-slide a:active {
+      color: #9e2020
+    }
 }
