--- a/sass/slide.scss
+++ b/sass/slide.scss
@@ -1,7 +1,8 @@
-#live-dance-show {
+#live-dance-show,
+#new-year-slide {
   position: relative;
 }
-#live-dance-show .slidesjs-navigation {
+.slidesjs-navigation {
   background: url("../images/slide-nav.png") no-repeat;
   position: absolute;
   width: 65px;
@@ -15,14 +16,14 @@
   }  
 }
 
-#live-dance-show .slidesjs-next {
+.slidesjs-next {
   right: 0;
   background-position: -85px -9px;
   &:hover {
     background-position: -245px -9px;
   }
 }
-#live-dance-show .slidesjs-previous {
+.slidesjs-previous {
   left: 0;
   background-position: -10px -9px;
   &:hover {
@@ -30,21 +31,21 @@
   }
 }
 
-#live-dance-show .slidesjs-pagination {
+.slidesjs-pagination {
   position: absolute;
-  bottom: 20px;
+  bottom: 7%;
   z-index: 10;
-  left: 45%;
+  left: 40%;
   transform: scale(1.5);
   -webkit-transform: scale(1.5);
 }
 
-#live-dance-show .slidesjs-pagination li {
+.slidesjs-pagination li {
   display: inline-block;
   margin: 0 2px;
 }
 
-#live-dance-show .slidesjs-pagination li a {
+.slidesjs-pagination li a {
   display: block;
   width: 13px;
   text-decoration: none;
@@ -63,12 +64,12 @@
   }
 }
 
-#live-dance-show .slidesjs-pagination li a.active,
-#live-dance-show .slidesjs-pagination li a:hover.active {
+.slidesjs-pagination li a.active,
+.slidesjs-pagination li a:hover.active {
   background-position: 0 -13px
 }
 
-#live-dance-show .slidesjs-pagination li a:hover {
+.slidesjs-pagination li a:hover {
   background-position: 0 -26px
 }
 
@@ -80,77 +81,14 @@
 
 // new year slide css
 .new-year {
-    #new-year-slide {
-      position: relative;
-    }
-    a.slidesjs-next,
-    a.slidesjs-previous {
-      background-image: url(../images/btns-next-prev.png);
-      position: absolute;
-      z-index: 10;
-      width:12px;
-      height:18px;
-      text-indent: -9999px;
-      bottom: 0;
-      z-index: 100;
-    }
-
-    a.slidesjs-next {
-      background-position: -12px 0;
-      left: 20px;
-    }
-
-    a:hover.slidesjs-next {
-      background-position: -12px -18px;
-    }
-
-    a.slidesjs-previous {
-      left: 0;
-      background-position: 0 0;
-    }
-
-    a:hover.slidesjs-previous {
-      background-position: 0 -18px;
-    }
-
-    .slidesjs-pagination {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-    }
-
-    .slidesjs-pagination li {
-      float: left;
-      margin: 0 1px;
-    }
-
-    .slidesjs-pagination li a {
-      display: block;
-      width: 13px;
-      height: 0;
-      padding-top: 13px;
-      background-image: url(../images/pagination.png);
-      background-position: 0 0;
-      float: left;
-      overflow: hidden;
-    }
-
-    .slidesjs-pagination li a.active,
-    .slidesjs-pagination li a:hover.active {
-      background-position: 0 -13px
-    }
-
-    .slidesjs-pagination li a:hover {
-      background-position: 0 -26px
-    }
-
-    #new-year-slide a:link,
-    #new-year-slide a:visited {
-      color: #333
-    }
-
-    #new-year-slide a:hover,
-    #new-year-slide a:active {
-      color: #9e2020
-    }
+  .slidesjs-navigation {
+    transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    top: 30%;
+  }
+  .slidesjs-pagination {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    left: 20%;
+  }
 }
