adjust some style

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -479,49 +479,50 @@ header a.logo {
 header a.logo img {
   width: 100%;
   min-width: 160px;
+  max-width: 170px;
 }
-/* line 101, ../sass/style.scss */
+/* line 102, ../sass/style.scss */
 header nav {
   width: 70%;
   float: right;
   margin-top: 29px;
 }
-/* line 105, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 header nav li {
   float: left;
   width: 20%;
 }
-/* line 109, ../sass/style.scss */
+/* line 110, ../sass/style.scss */
 header nav ul li a {
   display: block;
   text-decoration: none;
   height: 50px;
   text-align: center;
 }
-/* line 114, ../sass/style.scss */
+/* line 115, ../sass/style.scss */
 header nav ul li a.active {
   border-bottom: 4px solid #920807;
 }
-/* line 117, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 header nav ul li a:hover {
   border-bottom: 4px solid #920807;
 }
-/* line 120, ../sass/style.scss */
+/* line 121, ../sass/style.scss */
 header nav ul li a span {
   display: block;
 }
-/* line 122, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 header nav ul li a span.chinese {
   font-size: 1.2em;
   color: #920807;
 }
-/* line 126, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 header nav ul li a span.english {
   margin-top: 3px;
   color: #666;
 }
 
-/* line 135, ../sass/style.scss */
+/* line 136, ../sass/style.scss */
 .hero-img {
   position: relative;
   height: 580px;
@@ -529,7 +530,7 @@ header nav ul li a span.english {
   background-size: 100%;
   color: white;
 }
-/* line 141, ../sass/style.scss */
+/* line 142, ../sass/style.scss */
 .hero-img .hero-img-layer {
   position: absolute;
   z-index: 1px;
@@ -539,7 +540,7 @@ header nav ul li a span.english {
   background-color: #222;
   opacity: 0.4;
 }
-/* line 150, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .hero-img .slogon {
   position: relative;
   padding-top: 12%;
@@ -547,55 +548,55 @@ header nav ul li a span.english {
   width: 50%;
   margin: 0 auto;
 }
-/* line 156, ../sass/style.scss */
+/* line 157, ../sass/style.scss */
 .hero-img .slogon p {
   margin-top: 10px;
   font-size: 1.2em;
   color: #eee;
 }
-/* line 162, ../sass/style.scss */
+/* line 163, ../sass/style.scss */
 .hero-img .brief-introduction {
   position: relative;
   z-index: 3px;
   margin-top: 10%;
 }
-/* line 166, ../sass/style.scss */
+/* line 167, ../sass/style.scss */
 .hero-img .brief-introduction ul li {
   padding: 1em 2em;
   display: inline-block;
   font-size: 1.4em;
   background-color: rgba(230, 230, 230, 0.7);
 }
-/* line 171, ../sass/style.scss */
+/* line 172, ../sass/style.scss */
 .hero-img .brief-introduction ul li .number {
   color: #920807;
   font-size: 2em;
 }
 
-/* line 179, ../sass/style.scss */
+/* line 180, ../sass/style.scss */
 .introduction {
   background-color: white;
   padding-top: 5%;
   text-align: center;
 }
-/* line 183, ../sass/style.scss */
+/* line 184, ../sass/style.scss */
 .introduction h2 {
   margin-bottom: 2em;
 }
-/* line 186, ../sass/style.scss */
+/* line 187, ../sass/style.scss */
 .introduction .story {
   height: 300px;
   float: left;
   width: 29.333%;
   margin: 0 2%;
 }
-/* line 191, ../sass/style.scss */
+/* line 192, ../sass/style.scss */
 .introduction .story .title {
   font-weight: bold;
   font-size: 1.2em;
   margin: 1em 0;
 }
-/* line 196, ../sass/style.scss */
+/* line 197, ../sass/style.scss */
 .introduction .story .number {
   display: inline-block;
   width: 50px;
@@ -607,31 +608,31 @@ header nav ul li a span.english {
   font-size: 1.5em;
   color: white;
 }
-/* line 202, ../sass/style.scss */
+/* line 203, ../sass/style.scss */
 .introduction .story:nth-child(2) .number {
   background-color: #5481AB;
 }
-/* line 205, ../sass/style.scss */
+/* line 206, ../sass/style.scss */
 .introduction .story:nth-child(3) .number {
   background-color: #E89C4A;
 }
-/* line 208, ../sass/style.scss */
+/* line 209, ../sass/style.scss */
 .introduction .story:nth-child(4) .number {
   background-color: #30CF8A;
 }
-/* line 211, ../sass/style.scss */
+/* line 212, ../sass/style.scss */
 .introduction .story:nth-child(5) .number {
   background-color: #6D52AD;
 }
-/* line 214, ../sass/style.scss */
+/* line 215, ../sass/style.scss */
 .introduction .story:nth-child(6) .number {
   background-color: #920807;
 }
-/* line 217, ../sass/style.scss */
+/* line 218, ../sass/style.scss */
 .introduction .story:nth-child(7) .number {
   background-color: #5582AA;
 }
-/* line 220, ../sass/style.scss */
+/* line 221, ../sass/style.scss */
 .introduction .story i {
   display: block;
   font-size: 3em;
@@ -639,95 +640,95 @@ header nav ul li a span.english {
   color: #920807;
 }
 
-/* line 230, ../sass/style.scss */
+/* line 231, ../sass/style.scss */
 .live-dance {
   background: white;
   text-align: center;
 }
-/* line 233, ../sass/style.scss */
+/* line 234, ../sass/style.scss */
 .live-dance h2 {
   margin-bottom: 4%;
 }
-/* line 236, ../sass/style.scss */
+/* line 237, ../sass/style.scss */
 .live-dance .slide-item {
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
 }
-/* line 241, ../sass/style.scss */
+/* line 242, ../sass/style.scss */
 .live-dance .slide-item p {
   font-size: 1.2em;
   padding: 2%;
   background-color: rgba(0, 0, 0, 0.4);
   color: white;
 }
-/* line 248, ../sass/style.scss */
+/* line 249, ../sass/style.scss */
 .live-dance .slide1 {
   background-image: url("../images/dance-show1.JPG");
 }
-/* line 251, ../sass/style.scss */
+/* line 252, ../sass/style.scss */
 .live-dance .slide2 {
   background-image: url("../images/dance-show2.JPG");
 }
-/* line 254, ../sass/style.scss */
+/* line 255, ../sass/style.scss */
 .live-dance .slide3 {
   background-image: url("../images/dance-show3.JPG");
 }
-/* line 257, ../sass/style.scss */
+/* line 258, ../sass/style.scss */
 .live-dance .slide4 {
   background-image: url("../images/recruit.jpg");
 }
-/* line 260, ../sass/style.scss */
+/* line 261, ../sass/style.scss */
 .live-dance .slide5 {
   background-image: url("../images/all-member.jpg");
 }
-/* line 263, ../sass/style.scss */
+/* line 264, ../sass/style.scss */
 .live-dance .slide6 {
   background-image: url("../images/dance-show4.JPG");
 }
-/* line 266, ../sass/style.scss */
+/* line 267, ../sass/style.scss */
 .live-dance .slide8 {
   background-image: url("../images/dance-show6.JPG");
 }
-/* line 269, ../sass/style.scss */
+/* line 270, ../sass/style.scss */
 .live-dance .slide9 {
   background-image: url("../images/dance-show7.JPG");
 }
-/* line 272, ../sass/style.scss */
+/* line 273, ../sass/style.scss */
 .live-dance .slide10 {
   background-image: url("../images/member-list.png");
   background-position: top;
 }
-/* line 275, ../sass/style.scss */
+/* line 276, ../sass/style.scss */
 .live-dance .slide10 p {
   background-color: rgba(0, 0, 0, 0.8);
 }
-/* line 277, ../sass/style.scss */
+/* line 278, ../sass/style.scss */
 .live-dance .slide10 p a {
   text-decoration: underline;
   color: white;
 }
-/* line 283, ../sass/style.scss */
+/* line 284, ../sass/style.scss */
 .live-dance img {
   max-width: 100%;
 }
 
-/* line 288, ../sass/style.scss */
+/* line 289, ../sass/style.scss */
 .new-year {
   background-color: white;
   padding-bottom: 10%;
 }
-/* line 291, ../sass/style.scss */
+/* line 292, ../sass/style.scss */
 .new-year #new-year-slide {
   width: 50%;
   float: left;
 }
-/* line 294, ../sass/style.scss */
+/* line 295, ../sass/style.scss */
 .new-year #new-year-slide img {
   width: 100%;
 }
-/* line 297, ../sass/style.scss */
+/* line 298, ../sass/style.scss */
 .new-year #new-year-slide .caption {
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
@@ -737,7 +738,7 @@ header nav ul li a span.english {
   padding: 8px 2%;
   width: 96%;
 }
-/* line 307, ../sass/style.scss */
+/* line 308, ../sass/style.scss */
 .new-year .description {
   width: 48%;
   float: left;
@@ -745,18 +746,18 @@ header nav ul li a span.english {
   text-align: left;
 }
 
-/* line 314, ../sass/style.scss */
+/* line 315, ../sass/style.scss */
 .about-me {
   padding: 5% 0;
   text-align: center;
   background-color: #EEF8FD;
 }
-/* line 319, ../sass/style.scss */
+/* line 320, ../sass/style.scss */
 .about-me .avators li {
   display: inline-block;
   margin: 0 2%;
 }
-/* line 322, ../sass/style.scss */
+/* line 323, ../sass/style.scss */
 .about-me .avators li img {
   border: 1px solid #ccc;
   height: 100px;
@@ -764,25 +765,25 @@ header nav ul li a span.english {
   border-radius: 57px;
   padding: 6px;
 }
-/* line 331, ../sass/style.scss */
+/* line 332, ../sass/style.scss */
 .about-me .myself {
   width: 70%;
   margin: 20px auto;
 }
-/* line 334, ../sass/style.scss */
+/* line 335, ../sass/style.scss */
 .about-me .myself h3 {
   margin: 5% 0 3% 0;
 }
-/* line 337, ../sass/style.scss */
+/* line 338, ../sass/style.scss */
 .about-me .myself p {
   line-height: 2em;
 }
-/* line 341, ../sass/style.scss */
+/* line 342, ../sass/style.scss */
 .about-me .contact-me img {
   width: 150px;
 }
 
-/* line 345, ../sass/style.scss */
+/* line 346, ../sass/style.scss */
 footer {
   padding: 20px;
   color: #ccc;
@@ -791,34 +792,34 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
-  /* line 352, ../sass/style.scss */
+  /* line 353, ../sass/style.scss */
   .new-year .description,
   .new-year #new-year-slide {
     width: 100%;
   }
 
-  /* line 356, ../sass/style.scss */
+  /* line 357, ../sass/style.scss */
   .new-year .slidesjs-pagination {
     bottom: 35px;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 361, ../sass/style.scss */
+  /* line 362, ../sass/style.scss */
   h1 {
     font-size: 2.2em;
   }
 
-  /* line 364, ../sass/style.scss */
+  /* line 365, ../sass/style.scss */
   .brief-introduction {
     font-size: 12px;
   }
 
-  /* line 367, ../sass/style.scss */
+  /* line 368, ../sass/style.scss */
   .slidesjs-container {
     font-size: 12px;
   }
 
-  /* line 370, ../sass/style.scss */
+  /* line 371, ../sass/style.scss */
   .introduction .story {
     width: 100%;
     float: none;
@@ -826,93 +827,93 @@ footer {
     padding-bottom: 30px;
   }
 
-  /* line 376, ../sass/style.scss */
+  /* line 377, ../sass/style.scss */
   .hero-img {
     background-size: cover;
     height: 300px;
   }
 
-  /* line 380, ../sass/style.scss */
+  /* line 381, ../sass/style.scss */
   .hero-img .hero-img-layer {
     height: 300px;
   }
 
-  /* line 383, ../sass/style.scss */
+  /* line 384, ../sass/style.scss */
   header {
     text-align: center;
   }
 
-  /* line 386, ../sass/style.scss */
+  /* line 387, ../sass/style.scss */
   header a.logo {
     width: 160px;
   }
 
-  /* line 389, ../sass/style.scss */
+  /* line 390, ../sass/style.scss */
   .hero-img .slogon {
     width: 100%;
     padding-top: 15%;
   }
 
-  /* line 393, ../sass/style.scss */
+  /* line 394, ../sass/style.scss */
   .hero-img .brief-introduction ul li {
     padding: 2% 3%;
   }
 
-  /* line 396, ../sass/style.scss */
+  /* line 397, ../sass/style.scss */
   #live-dance-show .slidesjs-navigation {
     transform: scale(0.5);
     -webkit-transform: scale(0.5);
     top: 30%;
   }
 
-  /* line 401, ../sass/style.scss */
+  /* line 402, ../sass/style.scss */
   #live-dance-show .slidesjs-pagination {
     left: 30%;
     transform: scale(1);
     -webkit-transform: scale(1);
   }
 
-  /* line 406, ../sass/style.scss */
+  /* line 407, ../sass/style.scss */
   .about-me .myself {
     width: 100%;
   }
 
-  /* line 409, ../sass/style.scss */
+  /* line 410, ../sass/style.scss */
   h2 {
     padding-top: 40px;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 414, ../sass/style.scss */
+  /* line 415, ../sass/style.scss */
   .slidesjs-navigation {
     top: 20%;
   }
 
-  /* line 418, ../sass/style.scss */
+  /* line 419, ../sass/style.scss */
   #live-dance-show .slidesjs-pagination,
   .new-year .slidesjs-pagination {
     bottom: 5px;
     left: 0;
   }
 
-  /* line 423, ../sass/style.scss */
+  /* line 424, ../sass/style.scss */
   .new-year .slidesjs-pagination {
     bottom: 20px;
   }
 
-  /* line 426, ../sass/style.scss */
+  /* line 427, ../sass/style.scss */
   .each-news {
     margin-top: 50px;
   }
 }
 @media screen and (max-width: 1300px) {
-  /* line 433, ../sass/style.scss */
+  /* line 434, ../sass/style.scss */
   .big-screen {
     display: none;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 438, ../sass/style.scss */
+  /* line 439, ../sass/style.scss */
   .small-screen {
     display: none;
   }
