--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -781,9 +781,19 @@ header nav ul li a span.english {
 /* line 342, ../sass/style.scss */
 .about-me .contact-me img {
   width: 150px;
+  border: 1px solid #ccc;
+}
+/* line 346, ../sass/style.scss */
+.about-me .contact {
+  display: inline-block;
+  margin: 0 2%;
+}
+/* line 349, ../sass/style.scss */
+.about-me .contact p {
+  color: #555;
 }
 
-/* line 346, ../sass/style.scss */
+/* line 354, ../sass/style.scss */
 footer {
   padding: 20px;
   color: #ccc;
@@ -792,34 +802,34 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
-  /* line 353, ../sass/style.scss */
+  /* line 361, ../sass/style.scss */
   .new-year .description,
   .new-year #new-year-slide {
     width: 100%;
   }
 
-  /* line 357, ../sass/style.scss */
+  /* line 365, ../sass/style.scss */
   .new-year .slidesjs-pagination {
     bottom: 35px;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 362, ../sass/style.scss */
+  /* line 370, ../sass/style.scss */
   h1 {
     font-size: 2.2em;
   }
 
-  /* line 365, ../sass/style.scss */
+  /* line 373, ../sass/style.scss */
   .brief-introduction {
     font-size: 12px;
   }
 
-  /* line 368, ../sass/style.scss */
+  /* line 376, ../sass/style.scss */
   .slidesjs-container {
     font-size: 12px;
   }
 
-  /* line 371, ../sass/style.scss */
+  /* line 379, ../sass/style.scss */
   .introduction .story {
     width: 100%;
     float: none;
@@ -827,93 +837,93 @@ footer {
     padding-bottom: 30px;
   }
 
-  /* line 377, ../sass/style.scss */
+  /* line 385, ../sass/style.scss */
   .hero-img {
     background-size: cover;
     height: 300px;
   }
 
-  /* line 381, ../sass/style.scss */
+  /* line 389, ../sass/style.scss */
   .hero-img .hero-img-layer {
     height: 300px;
   }
 
-  /* line 384, ../sass/style.scss */
+  /* line 392, ../sass/style.scss */
   header {
     text-align: center;
   }
 
-  /* line 387, ../sass/style.scss */
+  /* line 395, ../sass/style.scss */
   header a.logo {
     width: 160px;
   }
 
-  /* line 390, ../sass/style.scss */
+  /* line 398, ../sass/style.scss */
   .hero-img .slogon {
     width: 100%;
     padding-top: 15%;
   }
 
-  /* line 394, ../sass/style.scss */
+  /* line 402, ../sass/style.scss */
   .hero-img .brief-introduction ul li {
     padding: 2% 3%;
   }
 
-  /* line 397, ../sass/style.scss */
+  /* line 405, ../sass/style.scss */
   #live-dance-show .slidesjs-navigation {
     transform: scale(0.5);
     -webkit-transform: scale(0.5);
     top: 30%;
   }
 
-  /* line 402, ../sass/style.scss */
+  /* line 410, ../sass/style.scss */
   #live-dance-show .slidesjs-pagination {
     left: 30%;
     transform: scale(1);
     -webkit-transform: scale(1);
   }
 
-  /* line 407, ../sass/style.scss */
+  /* line 415, ../sass/style.scss */
   .about-me .myself {
     width: 100%;
   }
 
-  /* line 410, ../sass/style.scss */
+  /* line 418, ../sass/style.scss */
   h2 {
     padding-top: 40px;
   }
 }
 @media screen and (max-width: 500px) {
-  /* line 415, ../sass/style.scss */
+  /* line 423, ../sass/style.scss */
   .slidesjs-navigation {
     top: 20%;
   }
 
-  /* line 419, ../sass/style.scss */
+  /* line 427, ../sass/style.scss */
   #live-dance-show .slidesjs-pagination,
   .new-year .slidesjs-pagination {
     bottom: 5px;
     left: 0;
   }
 
-  /* line 424, ../sass/style.scss */
+  /* line 432, ../sass/style.scss */
   .new-year .slidesjs-pagination {
     bottom: 20px;
   }
 
-  /* line 427, ../sass/style.scss */
+  /* line 435, ../sass/style.scss */
   .each-news {
     margin-top: 50px;
   }
 }
 @media screen and (max-width: 1300px) {
-  /* line 434, ../sass/style.scss */
+  /* line 442, ../sass/style.scss */
   .big-screen {
     display: none;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 439, ../sass/style.scss */
+  /* line 447, ../sass/style.scss */
   .small-screen {
     display: none;
   }
