adjust style for steps

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -216,7 +216,7 @@ header {
 			background-color: $dark-twitter;
 		}
 		&:nth-child(8) .number {
-			background-color: $twitter;
+			background-color: $theme-yellow;
 		}
 		i {
 			display: block;
